--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,17 @@
 <!DOCTYPE html>
+<html lang = "en">
 
-<html>
+   <head>
+      <meta charset = "UTF-8">
+      <title>React App</title>
+      <link rel="stylesheet" href="public/css/semantic.min.css"></link>
+   </head>
 
-	<head>
-		<title>Clementine.js - The elegant and lightweight full stack JavaScript boilerplate.</title>
-		
-		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
-	</head>
+   <body>
+      <div id = "app" class="ui container"></div>
 
-	<header>
-		<p>Welcome, <span id="display-name"></span>!</p>
-		<a class="menu" href="/profile">Profile</a>
-		<p>|</p>
-		<a class="menu" href="/logout">Logout</a>
-	</header>
-
-	<body>
-		<div class="container">
-			<img src="/public/img/clementine_150.png" />
-			<br />
-			<p class="clementine-text">Clementine.js</p>
-		</div>
-	
-		<div class="container">
-			<p>You have clicked the button <span id="click-nbr"></span> times.</p>
-			<br />
-			<div class="btn-container">
-				<button type="submit" class="btn btn-add">CLICK ME!</button>
-				<button class="btn btn-delete">RESET</button>
-			</div>
-		</div>
-		
-		<script type="text/javascript" src="common/ajax-functions.js"></script>
-		<script type="text/javascript" src="controllers/clickController.client.js"></script>
-		<script type="text/javascript" src="controllers/userController.client.js"></script>
-	</body>
+      <script type="text/javascript" src="common/ajax-functions.js"></script>
+      <script src = "public/js/bundle.js"></script>
+   </body>
 
 </html>
